<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/ic_dashboard"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_event"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@mipmap/ic_headset"
            android:title="@string/discover" />
        <item
            android:id="@+id/nav_my"
            android:icon="@mipmap/ic_forum"
            android:title="@string/my" />
    </group>


    <group
        android:id="@+id/help_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_dashboard"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@mipmap/ic_dashboard"
            android:title="@string/about_us" />
    </group>

</menu>
